# chatbot_langgraph

./: .gitignore  README.md  ingest_database.py  main.py  orchestrator_demo.py  pyproject.toml
backend/: main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.vue  index.css
frontend/src/components/: ChatDrawer.vue  Chatbot.vue  ClientRow.vue  ClientSummaryViewer.vue  ClientsList.vue
orchestrator/: graph.py  state.py
src/: graph.py  llm_config.py  logging_config.py  state.py
src/agents/doc_agent/: agent.py  loader.py
src/agents/sql_agent/: graph.py  state.py
src/agents/sql_agent/nodes/: answer.py  check.py  execute.py  fix.py  generate.py  plan.py  understand.py  validate.py
src/nodes/: answer.py  check.py  execute.py  fix.py  generate.py  plan.py  understand.py  validate.py
src/resources/: schema.json
src/tools/: doc_tool.py  duckdb_tool.py  sql_tool.py
